<resources>
    <string name="app_name">Book Pilot</string>

    <!-- Book & details -->
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN: 1234567891012</string>
    <string name="description">Description</string>
    <string name="book_title">Book Title </string>
    <!-- Buttons -->
    <string name="delete_button">Delete</string>
    <string name="add">Add</string>
    <string name="try_again">Try again</string>
    <string name="isbn_ok">OK</string>
    <string name="rate">Rate</string>
    <string name="navigate_to_list">Check Book List</string>
    <!-- Barcode Scanner Information-->
    <string name="barcode_instruction_scan">Scan ISBN number</string>
    <string name="barcode_instruction_ok">Press OK after right code appears.</string>
    <string name="barcode_decoder_error">Could not set up the detector!</string>
    <string name="barcode_processor">Processor released</string>
    <string name="camera_source_starts">Camera source is working</string>
    <string name="camera_source_destroyed">Camera source is working</string>
    <string name="permission_granted">Camera permission granted</string>
    <string name="permission_denied">Camera Permission denied</string>
    Camera source is destroyed
    <!-- Search Information -->
    <string name="search_hint">Search for book title / author / isbn</string>
    <string name="search_result">Search result(s):</string>
    <string name="search_empty">Enter valid query</string>
    <!-- Labels and items for menu -->
    <string name="menu_label_books">Book categories</string>
    <string name="menu_label_search">Search</string>
    <string name="menu_item_wish_list">Wish list</string>
    <string name="menu_item_unread">Unread</string>
    <string name="menu_item_read">Read</string>
    <string name="menu_item_books">Books</string>
    <string name="menu_item_isbn">Read ISBN code</string>
    <string name="menu_item_stores">Stores nearby</string>

    <!-- DetailFragment -->
    <!-- Changing button's text -->
    <string name="search_list_btn_txt">Add to Wish List</string>
    <string name="wish_list_btn_txt">Mark as Unread</string>
    <string name="unread_list_btn_txt">Mark as Read</string>
    <!-- Text for toasts and logging -->
    <!-- Updating -->
    <string name="update_failed">Update failed</string>
    <string name="book_updated">Book updated</string>
    <string name="title_info_log">title in updateDetailFragment is </string>
    <!-- Rating -->
    <string name="already_rated">You have rated this book</string>
    <string name="change_rating">Change rating</string>
    <string name="rating_failed">Rating failed</string>
    <string name="rating_updated">Rating updated</string>
    <string name="rating_message_text">Rate the book</string>
    <string name="rated">. Rated:</string>
    <string name="rate_value">/5</string>
    <string name="rate_this_book">Rate this book</string>
    <!-- Sharing -->
    <string name="share_value">share value is</string>
    <string name="read_this_book">I read this book</string>
    <string name="desired_books">My desired books</string>
    <!-- Addition -->
    <string name="book_already_added_toast">You already added this book.</string>
    <string name="book_already_added_log">Book is already in the database</string>
    <string name="book_added">Book added to Wish List</string>
    <string name="new_book">It is a new book</string>
    <string name="addition_failure">Book insertion failed</string>
    <!-- Deletion -->
    <string name="deletion_failure_toast">Error in deletion</string>
    <string name="deletion_failure_log">Book is not deleted</string>
    <string name="book_deletion_toast">Book is now deleted</string>
    <string name="book_deletion_log">Book is deleted</string>

    <!-- Text for intent extras -->
    <string name="rating">rating</string>
    <string name="book">book</string>
    <string name="books">books</string>
    <string name="position">position</string>
    <string name="id">id</string>
    <string name="category">category</string>
    <string name="barcode">barcode</string>
    <string name="book_list">bookList</string>
    <string name="item_id">itemId</string>
    <string name="menu_item">menuItem</string>

    <!-- Fragment labels -->
    <string name="wish_list">Wish list</string>
    <string name="unread_list">Unread</string>
    <string name="read_list">Read</string>

    <!-- Loader & connectivity -->
    <string name="loader_error">Problem with loader</string>
    <string name="connectivity_error">Problem with connectivity</string>
    <string name="connectivity_error_check">Please check your connectivity</string>
    <string name="snackbar_message">Device lost connectivity</string>
    <string name="current_uri">book uri</string>
    <string name="json_error">Problem retrieving the book JSON results.</string>
    <string name="error_response_code">Error response code:</string>
    <string name="url_building_error">Problem building the URL </string>
    <string name="request_url">Request Url is </string>
    <string name="http_request_error">Problem making the HTTP request.</string>
    <string name="identifier_error">Identifier does not exist</string>
    <string name="parsing_error">Problem parsing the book JSON results</string>
    <string name="store_finder_error">No bookstore found in 5KM radius!!!</string>
    <string name="store_log">stores after parsing is</string>
    <string name="places_api_error_code">Google Places API connection failed with error code: </string>
    <string name="retry_snakbar_action">Retry</string>
    <string name="current_location">My Location</string>

    <!-- Widget -->
    <string name="empty_view">No book added yet</string>
    <string name="widget_label">My wish list</string>

    <!-- Empty View -->
    <string name="wish_list_empty_view_text">No books found.\nIt is time for a search!\n\nSwipe to open menu.</string>
    <string name="unread_list_empty_view_text">No unread books found.\n\nYou can mark a book unread\nin wish list category at book details.</string>
    <string name="read_list_empty_view_text">No read books found.\n\nYou can mark a book read\nin unread list category at book details.</string>
    <string name="search_empty_view_text">No match found for query.</string>

    <!-- Content Descriptions -->
    <string name="image_content_description">Book cover</string>
    <string name="surface_desc">Captures frames from camera</string>
    <string name="ok_btn_desc">Button that should be pressed after right barcode appears</string>
    <string name="again_btn_desc">Button that should be pressed when barcode not read properly</string>
    <string name="rating_bar_desc">Rating bar shows the rate value in graphical form</string>
    <string name="rate_btn_desc">Button enables to rate a book or change existing rating</string>
    <string name="add_btn_desc">Button enables to add selected book to a list in the context</string>
    <string name="delete_btn_desc">Button enables to delete a book of a list in the context</string>
    <string name="list_btn_desc">Button enables to navigate to the list where a book has been added to</string>
    <string name="fab_detail_btn_desc">Button enables to share details of selected book</string>
    <string name="fab_list_btn_desc">Button enables to share a list of desired books</string>

    <!-- Database Information -->
    <string name="unknown_uri">Unknown uri </string>
    <string name="not_supported_uri">Not supported uri</string>
    <string name="title_requiremnt">Book requires a title</string>
    <string name="author_requiremnt">Book requires at least one author</string>
    <string name="description_requiremnt">Book requires a description</string>
    <string name="category_requiremnt">Book requires valid category</string>
    <string name="rating_requiremnt">Book requires valid rating</string>
    <string name="id_requiremnt">Valid id is required</string>
    <string name="unsupported_operation">Unsupported operation</string>
    <string name="unsupported_update">Update is not supported for</string>

</resources>
