<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Label and items for Book categories -->
    <item
        android:paddingTop="20dp"
        android:title="@string/menu_label_books"
        android:id="@+id/category_nav"
        android:checkableBehavior="single">
        <menu>
            <item
                android:id="@+id/menu_main_wish_list"
                android:title="@string/menu_item_wish_list"
                android:icon="@drawable/ic_list"
                android:checked="true"/>
            <item
                android:id="@+id/menu_main_unread"
                android:title="@string/menu_item_unread"
                android:icon="@drawable/ic_unchecked" />
            <item
                android:id="@+id/menu_main_read"
                android:title="@string/menu_item_read"
                android:icon="@drawable/ic_checked" />
        </menu>
    </item>

    <!-- Label and items for Search categories-->
    <item
        android:title="@string/menu_label_search">
        <menu>
            <item
                android:id="@+id/menu_main_nav_book"
                android:icon="@drawable/ic_book"
                android:title="@string/menu_item_books" />
            <item
                android:id="@+id/menu_main_nav_barcode"
                android:icon="@drawable/ic_barcode"
                android:title="@string/menu_item_isbn" />
            <item
                android:id="@+id/menu_main_nav_store"
                android:icon="@drawable/ic_place"
                android:title="@string/menu_item_stores" />
        </menu>
    </item>

</menu>