<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/search_linear_layout"
    tools:context="com.example.szage.bookpilot.ui.SearchActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="16dp">

       <EditText
           android:id="@+id/search_field"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:hint="@string/search_hint"/>

       <ImageView
           android:id="@+id/search_btn"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="7"
           app:srcCompat="@drawable/ic_search_black_24dp"
           android:scaleType="fitCenter"
           android:contentDescription="@string/book_title" />

   </LinearLayout>

    <TextView
        android:id="@+id/search_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search_result"/>

    <TextView
        android:id="@+id/search_list_empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_empty_view_text"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>


</LinearLayout>
